sql/backup/be_default.h
@@ -3,6 +3,7 @@
 
 #include <backup_engine.h>
 #include <backup/image_info.h>  // to define default backup image class
+#include <backup/be_logical.h>
 #include <backup/buffer_iterator.h>
 #include <backup/be_thread.h>
 
@@ -31,42 +32,6 @@ const byte BLOB_FIRST= (3U<<1); // First data block in buffer for blob buffer
 const byte BLOB_DATA=  (3U<<2); // Intermediate data block for blob buffer
 const byte BLOB_LAST=  (3U<<3); // Last data block in buffer for blob buffer
 
-/**
- * @class Engine
- *
- * @brief Encapsulates default online backup/restore functionality.
- *
- * This class is used to initiate the default backup algorithm, which is used
- * by the backup kernel to create a backup image of data stored in any
- * engine that does not have a native backup driver. It may also be used as
- * an option by the user.
- *
- * Using this class, the caller can create an instance of the default backup
- * backup and restore class. The backup class is used to backup data for a
- * list of tables. The restore class is used to restore data from a
- * previously created default backup image.
- */
-class Engine: public Backup_engine
-{
-  public:
-    Engine(THD *t_thd);
-
-    /*
-      Return version of backup images created by this engine.
-    */
-    const version_t version() const { return 0; };
-    result_t get_backup(const uint32, const Table_list &tables, 
-                        Backup_driver* &drv);
-    result_t get_restore(const version_t ver, const uint32, const Table_list &tables,
-                         Restore_driver* &drv);
-
-    /*
-     Free any resources allocated by the default backup engine.
-    */
-    void free() { delete this; }
-  private:
-    THD *m_thd; ///< Pointer to the current thread.
-};
 
 /**
  * @class Backup
@@ -87,7 +52,7 @@ class Backup: public Backup_thread_driver
     virtual ~Backup() 
     { 
       cleanup();
-      backup::free_table_list(all_tables); 
+      my_free(all_tables, MYF(0)); 
     }; 
     size_t size()  { return UNKNOWN_SIZE; };
     size_t init_size() { return 0; };
@@ -134,7 +99,7 @@ class Backup: public Backup_thread_driver
     result_t start_tbl_read(TABLE *tbl);
     int next_table();
     BACKUP_MODE mode;              ///< Indicates which mode the code is in
-    int tbl_num;                   ///< The index of the current table.
+    ulong tbl_num;                   ///< The index of the current table.
     uint *cur_blob;                ///< The current blob field.
     uint *last_blob_ptr;           ///< Position of last blob field.
     MY_BITMAP *read_set;           ///< The file read set.
@@ -162,11 +127,10 @@ class Restore: public Restore_driver
 {
   public:
     enum has_data_info { YES, WAIT, EOD };
-    Restore(const Table_list &tables, THD *t_thd);
+    Restore(const backup::Logical_snapshot &info, THD *t_thd);
     virtual ~Restore()
     { 
       cleanup();
-      backup::free_table_list(all_tables); 
     }; 
     result_t  begin(const size_t) { return backup::OK; };
     result_t  end();
@@ -177,7 +141,6 @@ class Restore: public Restore_driver
       cleanup();
       return backup::OK;
     }
-    TABLE_LIST *get_table_list() { return all_tables; }
     void free() { delete this; };
 
  private:
@@ -196,8 +159,10 @@ class Restore: public Restore_driver
       WRITE_BLOB_BUFFER            ///< Buffer blobs mode
     } RESTORE_MODE;
 
-    result_t truncate_table(TABLE *tbl);
-    int next_table();
+    /**
+      Reference to the corresponding logical snapshot object.
+    */
+    const backup::Logical_snapshot &m_snap;  
     RESTORE_MODE mode;             ///< Indicates which mode the code is in
     uint tbl_num;                  ///< The index of the current table.
     uint32 max_blob_size;          ///< The total size (sum of parts) for the blob.
@@ -207,12 +172,9 @@ class Restore: public Restore_driver
     uint *last_blob_ptr;           ///< Position of last blob field.
     Buffer_iterator rec_buffer;    ///< Buffer iterator for windowing records
     Buffer_iterator blob_buffer;   ///< Buffer iterator for windowing BLOB fields
-    TABLE_LIST *tables_in_backup;  ///< List of tables used in backup.
     byte *blob_ptrs[MAX_FIELDS];   ///< List of blob pointers used
     int blob_ptr_index;            ///< Position in blob pointer list
     THD *m_thd;                    ///< Pointer to current thread struct.
-    TABLE_LIST *all_tables;        ///< Reference to list of tables used.
-    ulonglong num_rows;            ///< Number of rows in table
     timestamp_auto_set_type old_tm;///< Save old timestamp auto set type.
     my_bool m_cleanup;             ///< Is call to cleanup() needed?
 
@@ -232,13 +194,13 @@ namespace backup {
 
 class Logger;
 
-class Default_snapshot: public Snapshot_info
+class Default_snapshot: public Logical_snapshot
 {
  public:
 
-  Default_snapshot(Logger&) :Snapshot_info(1) // current version number is 1
+  Default_snapshot(Logger&) :Logical_snapshot(1) // current version number is 1
   {}
-  Default_snapshot(Logger&, const version_t ver) :Snapshot_info(ver)
+  Default_snapshot(Logger&, const version_t ver) :Logical_snapshot(ver)
   {}
 
   enum_snap_type type() const
@@ -268,10 +230,10 @@ class Default_snapshot: public Snapshot_info
                                             TL_READ_NO_INSERT)) ? OK : ERROR; }
 
   result_t get_restore_driver(Restore_driver* &ptr)
-  { return (ptr= new default_backup::Restore(m_tables, ::current_thd)) ? OK : ERROR; }
+  { return (ptr= new default_backup::Restore(*this, ::current_thd)) ? OK : ERROR; }
 
   bool is_valid(){ return TRUE; };
-
+  
 };
 
 } // backup namespace
